dohpaZ (06/06/02)
------------------
Modifications:
 + version 4.2.8
 + Added the ability to remove all spawn points to the Spawn Point List context
   window.
 + Assorted SpawnMonitor/SpawnPoint cleanup.
 + Updates to itemStruct (from EQEmu 0.3.3.1 we got stackable, effectType, 
   and castTime) and I found skill mod id and skill mod percent.  Updated
   to the 05/06/02 patch (many many changes here).  
 + Many new item related opcodes (as of the 05/06/02 patch)
 + Updated to v2 EQItemDB entries (supports both versions) with data from the 
   new itemStruct.
 + Changed how the ItemDB is instantiated and how items are added, including
   more checks to minimize the chance of corrupt data being stored in the DB.
 + Increased maximum number of monitored opcodes from 10 to 15.
 + Minor additions to weapons27.h
 + Removed spelltimes.h and created a new spells.h with all the info (from the
   05/06/02 patches spdat.eff).  Modified spell_name() and spell_info() to
   use the new data.

fee (05/06/02)
-----------------
Mods:
 + updated ServerZoneEntry and newZone structs

fee (04/06/02)
-----------------
Map Update:
 + added succor point locations from LordCrush

dohpaZ (31/05/02)
------------------
Modifications:
 + version 4.2.7
 + Applied patch # 561114 "3 new maps" by mrsuspicious (mrsuspicious)
 + Added a KDevelop 2.0 project (showeq.kdevprj) for those who wish to use 
   that IDE.
 + Added Deity and Body type fields to the Spawn List.
 + Cleaned up some class names EQPlayer => Player, EQStatList => StatList,
   EQSkillList => SkillList.
 + Renamed class CSpawnList to SpawnList.  Split SpawnList related classes 
   into current SpawnList specific classes and those that could be reused 
   in the new lighter weight SpawnList.
 + Created Spawn List 2, a lighter weight less memory/CPU intensive
   Spawn List.  Defaults set to minimize CPU usage.  Made it the spawn list
   used by default.
 + Assorted cleanups in SpawnList.